# jax-llm-examples

./: .gitignore  README.md  multi_host_README.md  pyproject.toml
.github/workflows/: tests.yaml
deepseek_r1_jax/: README.md  main.ipynb  main.py  pyproject.toml
deepseek_r1_jax/deepseek_r1_jax/: chkpt_utils.py  decode_ragged_dot.py  model.py
deepseek_r1_jax/scripts/: convert_hf_r1_checkpoint.py  get_params_metadata_hf.py
deepseek_r1_jax/tests/: test_model.py  test_numerics.py  test_tokenizer.py
gemma4/: .gitignore  README.md  main.py  pyproject.toml
gemma4/gemma4_jax/: chkpt_utils.py  hf_configs.py  model.py
gemma4/scripts/: convert_weights.py  download_model.py  quantize_model.py
gemma4/tests/: test_model.py
gpt_oss/: README.md  main.py  pyproject.toml
gpt_oss/gpt_oss_jax/: chkpt_utils.py  configs.py  decode_ragged_dot.py  model.py
gpt_oss/scripts/: convert_weights.py  download_model.py  quantize_model.py
gpt_oss/tests/: test_model.py
kimi_k2/: README.md  main.py  pyproject.toml
kimi_k2/kimi_k2_jax/: chkpt_utils.py  decode_ragged_dot.py  model.py
kimi_k2/scripts/: convert_hf_k2_checkpoint.py  get_params_metadata_hf.py
kimi_k2/tests/: test_model.py
llama3/: README.md  main.py  pyproject.toml
llama3/llama3_jax/: chkpt_utils.py  model.py  ragged_attention.py
llama3/scripts/: convert_weights.py  download_model.py  quantize_model.py
llama3/tests/: test_model.py
llama4/: README.md  main.py  pyproject.toml
llama4/llama4_jax/: chkpt_utils.py  decode_ragged_dot.py  model.py  ragged_attention.py
llama4/scripts/: convert_weights.py  download_model.py  quantize_model.py
llama4/tests/: test_model.py
misc/: tpu_toolkit.sh
nemotron3/: README.md  main.py  pyproject.toml
nemotron3/nemotron3_jax/: chkpt_utils.py  model.py
nemotron3/scripts/: convert_weights.py  download_model.py  quantize_model.py
nemotron3/tests/: test_model.py
qwen3/: README.md  main.py  pyproject.toml
qwen3/qwen3_jax/: chkpt_utils.py  decode_ragged_dot.py  model.py
qwen3/scripts/: convert_weights.py  download_model.py  quantize_model.py
qwen3/tests/: test_model.py
serving/: README.md  client_demo.py  main_serving_ds_r1.py  main_serving_gemma4.py  main_serving_gpt_oss.py  main_serving_llama3.py  pyproject.toml
serving/serving_jax/: __init__.py  attention_cache_utils.py  cross_host.py  http_server.py  serving_loop.py
smallthinker/: .gitignore  README.md  main.py  pyproject.toml  run_distributed.sh  setup_host1.sh
smallthinker/scripts/: convert_weights.py
smallthinker/smallthinker_jax/: chkpt_utils.py  model.py  ragged_attention.py
