[project]
name = "deeseek_r1_jax"
version = "0.1.0"
description = "Fast, cheap, and minimal Deepseek R1 inference in JAX"
authors = [
    { name = "Robert Dyro" },
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }

dependencies = [
    "jax",
    "transformers>=4.49.0",  # for the model config and the tokenizer
    "tqdm",
    "numpy",
    "orbax-checkpoint",
    "ipykernel",
    "tpu-info",
    "etils",
    "torch",
    "torchvision>=0.21.0",
]

# we don't need CUDA torch
[[tool.uv.index]]
name = "pytorch"
url = "https://download.pytorch.org/whl/cpu"

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["deepseek_r1_jax"]

[tool.setuptools.dynamic]
dependencies = { file = ["pyproject.toml"] }
